// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBar renders two items all ok snapshot 1`] = `
<div
  className="Statusbar"
>
  <div
    className="Statusbar-panel Statusbar-panel--error"
  >
    <span
      aria-label="Error"
      className="icon"
      role="img"
    >
       
    </span>
     
    <span>
      0
       
      Errors
    </span>
  </div>
  <div
    className="Statusbar-panel Statusbar-panel--warning"
  >
    <span
      aria-label="Warning"
      className="icon"
      role="img"
    >
       
    </span>
     
    <span>
      0
       
      Warnings
    </span>
  </div>
  <p
    className="Statusbar-panel--statusMessage"
  >
    Building: vigoda
  </p>
  <p
    className="Statusbar-panel--lastEdit"
  >
    <span
      className="Statusbar-panel--lastEditMessage"
    >
      Last Edit 
    </span>
    main.go [+ 2 more]
  </p>
  <span
    className="Statusbar-panel Statusbar-panel--up"
  >
    0
     / 
    2
     resources up 
    <svg
      className="icon"
    >
      logo.svg
    </svg>
  </span>
</div>
`;

exports[`StatusBar renders two items both errors snapshot 1`] = `
<div
  className="Statusbar"
>
  <div
    className="Statusbar-panel Statusbar-panel--error"
  >
    <span
      aria-label="Error"
      className="icon"
      role="img"
    >
      ❌
    </span>
     
    <span>
      2
       
      Errors
    </span>
  </div>
  <div
    className="Statusbar-panel Statusbar-panel--warning"
  >
    <span
      aria-label="Warning"
      className="icon"
      role="img"
    >
       
    </span>
     
    <span>
      0
       
      Warnings
    </span>
  </div>
  <p
    className="Statusbar-panel--statusMessage"
  >
    Build failed: vigoda
  </p>
  <p
    className="Statusbar-panel--lastEdit"
  >
    <span
      className="Statusbar-panel--lastEditMessage"
    >
      Last Edit 
    </span>
    main.go [+ 1 more]
  </p>
  <span
    className="Statusbar-panel Statusbar-panel--up"
  >
    0
     / 
    2
     resources up 
    <svg
      className="icon"
    >
      logo.svg
    </svg>
  </span>
</div>
`;

exports[`StatusBar renders without crashing 1`] = `
<div
  className="Statusbar"
>
  <div
    className="Statusbar-panel Statusbar-panel--error"
  >
    <span
      aria-label="Error"
      className="icon"
      role="img"
    >
       
    </span>
     
    <span>
      0
       
      Errors
    </span>
  </div>
  <div
    className="Statusbar-panel Statusbar-panel--warning"
  >
    <span
      aria-label="Warning"
      className="icon"
      role="img"
    >
       
    </span>
     
    <span>
      0
       
      Warnings
    </span>
  </div>
  <p
    className="Statusbar-panel--statusMessage"
  >
    
  </p>
  
  <span
    className="Statusbar-panel Statusbar-panel--up"
  >
    0
     / 
    0
     resources up 
    <svg
      className="icon"
    >
      logo.svg
    </svg>
  </span>
</div>
`;
